# Electronic-Exchange-Simulator

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
benchmarks/: benchmark_book.py  benchmark_matching.py  run_all.py
data/: sample_orders.csv
docs/: Architecture.md  DesignDecisions.md  DeveloperGuide.md  UserGuide.md
examples/: run_full_simulation.py
exchange/: __init__.py
exchange/analytics/: __init__.py  flow.py  latency.py  metrics.py
exchange/core/: __init__.py  exchange.py  execution_history.py  market_data.py
exchange/dashboard/: __init__.py  app.py
exchange/interfaces/: __init__.py  base_book.py  base_engine.py  base_exchange.py
exchange/matching/: __init__.py  engine.py  order_book.py  price_level.py
exchange/orders/: __init__.py  enums.py  models.py  validator.py
exchange/replay/: __init__.py  engine.py  loader.py
exchange/reporting/: __init__.py  reporter.py
templates/: report.html.j2
tests/: conftest.py
tests/integration/: test_exchange.py
tests/replay/: test_replay.py
tests/stress/: test_stress.py
tests/unit/: test_analytics.py  test_engine.py  test_models.py  test_order_book.py  test_validator.py
